syntax = "proto3";

enum MessageType {
  Empty = 0;
  Terminate = 1;
  AppendEntries = 2;
  AppendEntriesResponse = 3;
  RequestVote = 4;
  RequestVoteResponse = 5;
  Command = 6;
}

message WireMessage {
  ProcessId to = 1;
  ProcessId from = 2;
  Message message = 3;
}

message Message {
  MessageType type = 1;
  uint64 term = 2;
  uint64 prevIndex = 3;
  uint64 prevTerm = 4;
  repeated Entry entries = 5;
  uint64 commitIndex = 6;
  bool success = 7; // used for voted or append success
  ClientCommand command = 8;
  ProcessId client = 9;
}

message ProcessId {
  oneof ip {
    fixed32 v4 = 1;
    string v6 = 2;
  }
  uint32 port = 3;
  uint32 id = 4;
}

enum EntryType {
  Normal = 0;
}

message Entry {
  EntryType type = 1;
  uint64 term = 2;
  uint64 index = 3;
  bytes bytes = 4;
}

message ClientCommand {
  EntryType type = 1;
  bytes bytes = 2;
}